# pylab

./: .gitignore  README.md  demo.ipynb  main.py  pyproject.toml
eda/: car.ipynb  car_price.ipynb  demo.ipynb
src/basic/function/: closure_generator.py  func.py
src/basic/value/: list.py  list_and_tuple.py  number.py  pfile.py  ptime.py  set_dict.py  string.py
src/basic/variable/: variable.py
src/dframe/: dframe.py
