[project]
name = "pylab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "notebook>=7.4.5",
    "numpy>=2.1.3",
    "pandas>=2.3.2",
    "pandas-profiling>=3.6.6",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.16.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
